--- a/public/css/style.css
+++ b/public/css/style.css
@@ -12,12 +12,17 @@ body,
   height: 100%;
 }
 
-body {
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+body, 
+h1, 
+h2, 
+h3, 
+h4, 
+h5 {
+  font-family: 'Raleway', sans-serif;
 }
 
 nav {
-  background-color: #5793fd;
+  background-color: rgb(83, 11, 124);
   color: #ffffff;
   padding: 24px;
   line-height: 3;
@@ -41,7 +46,7 @@ nav a {
 
 nav a:hover {
   background-color: #ffffff;
-  color: #5793fd;
+  color: rgb(83, 11, 124);
 }
 
 header {
@@ -78,7 +83,7 @@ select:hover {
 
 select:focus {
   border-color: #aaa;
-  box-shadow: 0 0 1px 3px rgba(59, 153, 252, 0.7);
+  box-shadow: 0 0 1px 3px rgba(108, 62, 184, 0.699);
   box-shadow: 0 0 0 3px -moz-mac-focusring;
   color: #222;
   outline: none;
